--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -22,3 +22,7 @@ jobs:
         run: go test -v ./...
       - name: Update coverage report
         uses: ncruces/go-coverage-report@v0
+        with:
+          report: true
+          chart: true
+          amend: true
