--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Build
         run: go build -v ./...
       - name: Test
-        run: go test -v ./...
+        run: go test -v $(go list ./... | grep -v /example/)
       - name: Update coverage report
         uses: ncruces/go-coverage-report@v0
         with:
