--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -16,5 +16,6 @@ jobs:
         uses: anothrNick/github-tag-action@1.73.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          DEFAULT_BUMP: patch
           TAG_PREFIX: v
-          INITIAL_VERSION: 1.0.0
+          INITIAL_VERSION: 0.9.9
