--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -16,5 +16,5 @@ jobs:
         uses: anothrNick/github-tag-action@1.73.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          DEFAULT_BUMP: major
+          DEFAULT_BUMP: minor
           TAG_PREFIX: v
