--- a/example/.env.sample
+++ b/example/.env.sample
@@ -4,3 +4,4 @@ QUEUER_DB_DATABASE=postgres
 QUEUER_DB_USERNAME=username
 QUEUER_DB_PASSWORD=password1234
 QUEUER_DB_SCHEMA=public
+QUEUER_DB_SSLMODE=disable
