--- a/.github/workflows/gosec.yml
+++ b/.github/workflows/gosec.yml
@@ -14,6 +14,8 @@ jobs:
     steps:
       - name: Checkout Source
         uses: actions/checkout@v4
+        with:
+          submodules: true
       - name: Run Gosec Security Scanner
         uses: securego/gosec@master
         with:
