--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
       - name: Checkout Source
         uses: actions/checkout@v4
+        with:
+          submodules: true
       - name: Minor version for each merge
         uses: anothrNick/github-tag-action@1.73.0
         env:
