--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "queuerSql"]
+[submodule "github.com/siherrmann/queuerSql"]
 	path = sql
 	url = https://github.com/siherrmann/queuerSql.git
